# reso

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  hi_res_logo.xcf  palette.py  palette_todos.md  regionmapper.py  requirements.txt  reso.py  resoboard.py  setup.cfg  tests.py  tests_for_regionmapper.py
components/: README.md  block_of_timers.xcf  pretty_palette.xcf
doc/: reso_whitepaper.md
docs/: ALGORITHM.md  ARCHITECTURE.md
docs/algorithm_explanation_images/: parts.xcf
examples/: adders.xcf  aseprite_example.aseprite  basic_gates.xcf  cgol_cell.xcf  clocks.xcf
examples/.ipynb_checkpoints/: nb100_rust_explorations-checkpoint.ipynb
examples/bangbangcon_2021_slides/: minecraft_slide.xcf  slide_001_01_gates.xcf  slide_001_title.xcf  slide_002_logo.xcf  slides_001_01_gates.xcf  slides_003_gates_summary.xcf  slides_202_tdd.xcf
examples/failed_experiments/: GoL_16x9_glider.xcf  GoL_5x5_glider.xcf  cgol_cell.xcf  cgol_cell_old.xcf  seeds_cell.xcf  smaller_cell.xcf
logo/: hi_res_logo.xcf  logo_stuff.xcf
slides/: bangbang_final_slide.xcf  slide_002_logo_a.xcf  slide_002_logo_a_wires.xcf  slides_005_algorithm.xcf  talk_notes.txt
slides/slides/: palette.xcf
slides/slides_04_final/: slides_1000_pse.xcf
src/reso/: __init__.py  __main__.py  palette.py  regionmapper.py  resoboard.py
src/reso.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: tests.py  tests_for_regionmapper.py
