[metadata]
name = reso
version = 0.0.1
author = lynndotpy
author_email = lynn@lynndotpy.xyz
description = A digital logic circuit simulator that operates over images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/lynnpepin/reso
project_urls =
    Bug Tracker = https://gitlab.com/lynnpepin/reso/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
